# AndroidPrybar

./: README.md
.claude/skills/unicorn-trace/: GUIDE.md  SKILL.md
TraceDemo/: API_EXAMPLES.md  README.md  gradle.properties  settings.gradle.kts
TraceDemo/app/: build.gradle.kts
TraceDemo/app/src/main/: AndroidManifest.xml
TraceDemo/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TraceDemo/app/src/main/cpp/include/: ARM64Emulator.h
TraceDemo/app/src/main/java/com/prybar/tracedemo/: MainActivity.java
TraceDemo/app/src/main/res/layout/: activity_main.xml
TraceDemo/app/src/main/res/values/: strings.xml  themes.xml
TraceDemo/app/src/main/res/values-night/: themes.xml
TraceDemo/gradle/wrapper/: gradle-wrapper.properties
tools/: build_calltree.py  trace_receiver.py
